--- a/2018_06/tip_2018_06.md
+++ b/2018_06/tip_2018_06.md
@@ -62,4 +62,4 @@ autoplot(ds.time)
 Summary
 -------
 
-Overall, this vignette demonstrates the enhancement of computation time using parallel computing for a specific task. Nevertheless, readers are advised to learn further on the topic in order to understand whether (and under what conditions) parallel computing improves performance. Check the following [notes](http://dept.stat.lsa.umich.edu/~jerrick/courses/stat701/notes/parallel.html) by Josh Errickson for further reading on the topic.
+Overall, this vignette demonstrates the enhancement of computation time using parallel computing for a specific task. Note that the illustration exhibited here was conducted using a Linux OS and, thus, the `mclapply` function may not perform the same on a Windows OS. Users are advised to learn further on the topic in order to understand whether (and under what conditions) parallel computing improves performance. Check the following [notes](http://dept.stat.lsa.umich.edu/~jerrick/courses/stat701/notes/parallel.html) by Josh Errickson for further reading on the topic.
